force-app/main/default/objects/ssot__SalesOrderProductEngagement__dlm/fields/ssot__ProductAffiliationName__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductAffiliationName__c</fullName>
    <label>Product Affiliation</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductAffiliationName</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>