force-app/main/default/objects/ssot__SalesOrderProductEngagement__dlm/fields/ssot__ProductVariantDescription__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProductVariantDescription__c</fullName>
    <label>Product Variant</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProductVariantDescription</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>