force-app/main/default/objects/ssot__SalesOrderProductEngagement__dlm/fields/ssot__UtmId__c.field-meta.xml
<CustomField>
    <fullName>ssot__UtmId__c</fullName>
    <label>UTM Id</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>UtmId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>